--- a/core/templates/login/login.html
+++ b/core/templates/login/login.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base.html' %}
+{% extends 'login/base.html' %}
 {% load static %}
 
 {% block title %}Login - Agenda Virtual{% endblock %}
@@ -6,8 +6,8 @@
 {% block content %}
 <div class="login-container">
     <h2>Login</h2>
-    <form action="/kanban/" method="get">
-        <input type="text" placeholder="Usuário" name="username" required>
+    <form action="{% url 'login' %}" method="POST"> {% csrf_token %}
+        <input type="text" placeholder="E-mail" name="email" required>
         <input type="password" placeholder="Senha" name="password" required>
         <button type="submit">Entrar</button>
     </form>
