--- a/core/templates/kanban.html
+++ b/core/templates/kanban.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <h1>Minha Agenda</h1>
-        <button onclick="logout()">Sair</button>
+        <button onclick="window.location.href='{% url 'logout' %}'">Sair</button>
     </nav>
 
     <div class="kanban-container">
