--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -130,26 +130,40 @@ body {
 
 /* ======== MODAL ======== */
 .modal {
-    display: none;
+    display: none; 
     position: fixed;
     z-index: 1000;
-    padding-top: 100px;
+    
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
+    
+    align-items: center; 
+    justify-content: center; 
 }
 
 .modal-content {
     background-color: #fff;
-    margin: auto;
+    margin: 0; 
     padding: 20px;
     border-radius: 10px;
     width: 40%;
+    
+    max-height: 85vh; 
+    display: flex;
+    flex-direction: column; 
+    
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
     position: relative;
     animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal-body {
+    overflow-y: auto; 
+    padding-right: 15px; 
+    flex-grow: 1; /* Ocupa o espaço restante verticalmente */
 }
 
 @keyframes fadeIn {
